--- a/src/app/message-search/message-search.component.html
+++ b/src/app/message-search/message-search.component.html
@@ -1,15 +1,6 @@
-<!--
-<div id="search-component">
-    <h4>Message Search</h4>
-    <input #searchBox id="search-box" (ngModelChange)="search($event)" [ngModel]="list">
-    <div>
-        <ul *ngFor="let msg of msgs">
-            <li>{{msg.comment}}</li>
-        </ul>
-    </div>
-</div>
--->
-<h4 style="padding-left:50px">Message Search</h4>
+<h4 style="padding-left:50px">
+    Message Search
+</h4>
 <div style="width:50%;padding-left:50px;">
     <nav>
         <div class="nav-wrapper">
